fix:make Menu component export default its class. Fix MenuItem's slot items text break, set to nowrap now

--- a/components/Menu/MenuItem/MenuItem.css
+++ b/components/Menu/MenuItem/MenuItem.css
@@ -1,5 +1,6 @@
 :host {
     -webkit-tap-highlight-color: transparent;
+    white-space: nowrap;
 }
 :host button,
 :host li {
